# onnx-inference

./: Cargo.toml  README.md  embedding.json
src/: main.rs
