[package]
name = "onnx-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15"
tokenizers = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
ort = "1.16.3"
