[package]
name = "onnx-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16"}
tokenizers = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
ort = "2.0.0-rc.10"
ort-sys = "=2.0.0-rc.10"
